[gd_scene load_steps=12 format=3 uid="uid://bqxal75x5yey0"]

[ext_resource type="Script" path="res://resource/main.gd" id="1_mjd3n"]
[ext_resource type="Script" path="res://resource/scenes/player/player_ui_manager.gd" id="2_htfal"]
[ext_resource type="Script" path="res://resource/scenes/my_bag/bag_manager.gd" id="2_iscwm"]
[ext_resource type="PackedScene" uid="uid://qma5y6wgja7b" path="res://resource/scenes/enemy/enemy.tscn" id="2_lrf40"]
[ext_resource type="PackedScene" uid="uid://cubfyfclpisd8" path="res://resource/scenes/player/player.tscn" id="2_lvf1d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_57ro5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ggfv"]
bg_color = Color(0.956863, 0.054902, 0.054902, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8w5c1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rilny"]
bg_color = Color(0.0980392, 0.0666667, 0.917647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qpvyr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02ctj"]
bg_color = Color(0.898039, 0.960784, 0.0823529, 1)

[node name="main" type="Node2D"]
script = ExtResource("1_mjd3n")

[node name="enemy" parent="." instance=ExtResource("2_lrf40")]
unique_name_in_owner = true
position = Vector2(768, 142)

[node name="Player" parent="." instance=ExtResource("2_lvf1d")]
unique_name_in_owner = true
position = Vector2(277, 228)

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerUiManager" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_htfal")

[node name="MarginContainer" type="VBoxContainer" parent="UI/PlayerUiManager"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 38.0

[node name="HPProgressBar" type="ProgressBar" parent="UI/PlayerUiManager/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_57ro5")
theme_override_styles/fill = SubResource("StyleBoxFlat_1ggfv")
value = 10.0
show_percentage = false

[node name="Control" type="Control" parent="UI/PlayerUiManager/MarginContainer/HPProgressBar"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HPShow" type="Label" parent="UI/PlayerUiManager/MarginContainer/HPProgressBar/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -1.0
offset_top = -5.0
offset_right = 202.0
offset_bottom = 18.0
theme_override_font_sizes/font_size = 12
text = "1/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MPProgressBar" type="ProgressBar" parent="UI/PlayerUiManager/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_8w5c1")
theme_override_styles/fill = SubResource("StyleBoxFlat_rilny")
value = 10.0
show_percentage = false

[node name="Control" type="Control" parent="UI/PlayerUiManager/MarginContainer/MPProgressBar"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MPShow" type="Label" parent="UI/PlayerUiManager/MarginContainer/MPProgressBar/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -1.0
offset_top = -5.0
offset_right = 202.0
offset_bottom = 18.0
theme_override_font_sizes/font_size = 12
text = "1/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BagManager" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 250.0
offset_top = 159.0
offset_right = 290.0
offset_bottom = 199.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("2_iscwm")

[node name="Bag" type="MarginContainer" parent="UI/BagManager"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 1
offset_right = 600.0
offset_bottom = 300.0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="UI/BagManager/Bag"]
layout_mode = 2
color = Color(0.188235, 0.215686, 0.2, 0.666667)

[node name="MarginContainer" type="HBoxContainer" parent="UI/BagManager/Bag"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/BagManager/Bag/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="UI/BagManager/Bag/MarginContainer/MarginContainer"]
layout_mode = 2
color = Color(0.145098, 0.133333, 0.223529, 0.27451)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer5" type="MarginContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="MarginContainer2" type="VBoxContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer5"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="HBoxContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer5/MarginContainer2"]
layout_mode = 2

[node name="hp" type="Label" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer5/MarginContainer2/Label"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "HP："

[node name="mp" type="Label" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer5/MarginContainer2/Label"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "MP："

[node name="Label2" type="HBoxContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer5/MarginContainer2"]
layout_mode = 2

[node name="attack" type="Label" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer5/MarginContainer2/Label2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "攻击："

[node name="defence" type="Label" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer5/MarginContainer2/Label2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "防御："

[node name="MarginContainer4" type="MarginContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="Control2" type="Label" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
text = "经验"

[node name="MarginContainer" type="MarginContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 10

[node name="Label3" type="ProgressBar" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_qpvyr")
theme_override_styles/fill = SubResource("StyleBoxFlat_02ctj")
step = 10.0
value = 20.0

[node name="Control" type="Control" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="equip" type="HBoxContainer" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="wepon" type="TextureRect" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip/wepon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -13.0
offset_right = 4.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "武器"

[node name="cloth" type="TextureRect" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip/cloth"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -13.0
offset_right = 4.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "防具"

[node name="shoe" type="TextureRect" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip/shoe"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -13.0
offset_right = 4.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "鞋子"

[node name="header" type="TextureRect" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip/header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -13.0
offset_right = 4.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "头盔"

[node name="GridContainer" type="GridContainer" parent="UI/BagManager/Bag/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 5

[node name="Button" type="Button" parent="UI"]
offset_left = 178.0
offset_top = 104.0
offset_right = 216.0
offset_bottom = 134.0
text = "add
"

[node name="Button2" type="Button" parent="UI"]
offset_left = 376.0
offset_top = 100.0
offset_right = 418.0
offset_bottom = 130.0
text = "dete
"

[connection signal="gui_input" from="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip/wepon" to="UI/BagManager" method="_on_wepon_gui_input"]
[connection signal="gui_input" from="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip/cloth" to="UI/BagManager" method="_on_cloth_gui_input"]
[connection signal="gui_input" from="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip/shoe" to="UI/BagManager" method="_on_shoe_gui_input"]
[connection signal="gui_input" from="UI/BagManager/Bag/MarginContainer/MarginContainer/VBoxContainer/MarginContainer3/equip/header" to="UI/BagManager" method="_on_header_gui_input"]
[connection signal="pressed" from="UI/Button" to="UI/BagManager" method="_on_button_pressed"]
[connection signal="pressed" from="UI/Button2" to="UI/BagManager" method="_on_button_2_pressed"]

[editable path="Player"]
